--- a/job-demo/src/main/resources/application.properties
+++ b/job-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # web port
-server.port=8082
+server.port=8081
 # no web
 #spring.main.web-environment=false
 
@@ -13,14 +13,14 @@ xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
 ### xxl-job, access token
 xxl.job.accessToken=
 
-### xxl-job executor appname
-xxl.job.executor.appname=node-02
-### xxl-job executor registry-address: default use address to registry , otherwise use ip:port if address is null
+### 执行器AppName [选填]：执行器心跳注册分组依据；为空则关闭自动注册
+xxl.job.executor.appname=node-01
+### 执行器注册 [选填]：优先使用该配置作为注册地址，为空时使用内嵌服务 ”IP:PORT“ 作为注册地址。从而更灵活的支持容器类型执行器动态IP和动态映射端口问题。
 xxl.job.executor.address=
-### xxl-job executor server-info
+### 执行器IP [选填]：默认为空表示自动获取IP，多网卡时可手动设置指定IP，该IP不会绑定Host仅作为通讯实用；地址信息用于 "执行器注册" 和 "调度中心请求并触发任务"；
 xxl.job.executor.ip=
-xxl.job.executor.port=9992
+xxl.job.executor.port=9091
 ### xxl-job executor log-path
-xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
+xxl.job.executor.logpath=/data/applogs/xxl-job/job-demo
 ### xxl-job executor log-retention-days
 xxl.job.executor.logretentiondays=30
